salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/rig_PreferredLane__c.object-meta.xml
<CustomObject>
    <label>Preferred Lane</label>
    <nameField>
        <displayFormat>PI-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Lanes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>