salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/fields/rig_DestinationRange__c.field-meta.xml
<CustomField>
    <fullName>rig_DestinationRange__c</fullName>
    <label>Destination Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>