salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/fields/rig_EntityOrigin__c.field-meta.xml
<CustomField>
    <fullName>rig_EntityOrigin__c</fullName>
    <defaultValue>&quot;ui&quot;</defaultValue>
    <description>where this entity came from? Was it created by a human through UI (default)? Imported from another source like carrierList? when? purpose to be able to identify entities from different bulk API imports for rollback</description>
    <inlineHelpText>where this entity came from? Was it created by a human through UI (default)? Imported from another source like carrierList? when? purpose to be able to identify entities from different bulk API imports for rollback</inlineHelpText>
    <label>Entity Origin</label>
    <length>128</length>
    <type>Text</type>
</CustomField>