salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/fields/rig_EquipmentCategory__c.field-meta.xml
<CustomField>
    <fullName>rig_EquipmentCategory__c</fullName>
    <label>Equipment Category</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>Reefer</fullName>
            </value>
            <value>
                <fullName>Specialized</fullName>
            </value>
            <value>
                <fullName>Ocean/Intermodal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>