salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/fields/rig_OriginCity__c.field-meta.xml
<CustomField>
    <fullName>rig_OriginCity__c</fullName>
    <label>Origin City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>