salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/fields/rig_OriginState__c.field-meta.xml
<CustomField>
    <fullName>rig_OriginState__c</fullName>
    <label>Origin State</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>rtms__States</valueSetName>
    </valueSet>
</CustomField>