salesforce-integration/Salesforce-Components/objects/rig_PreferredLane__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>rig_OriginState__c</columns>
    <columns>rig_OriginCity__c</columns>
    <columns>rig_OriginRange__c</columns>
    <columns>rig_DestinationState__c</columns>
    <columns>rig_DestinationCity__c</columns>
    <columns>rig_DestinationRange__c</columns>
    <columns>rig_EquipmentCategory__c</columns>
    <columns>rig_EntityOrigin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>